# aiida-ssh2win

./: .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  publish-on-pypi.yml
aiida_ssh2win/: __init__.py  calculations.py  cli.py  helpers.py  parsers.py  transport.py
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst
examples/: example_01.py
tests/: test_calculations.py  test_cli.py  test_transport.py
